src/test/testData/obj/InspectionsTestData.obj
<warning descr="Unused MTL file reference statement">mtllib <error descr="File “tetrahedron.mtl” cannot be found">tetrahedron.mtl</error></warning>

v 1.0 1.0 1.0
v 2.0 2.0 2.0
v 3.0 3.0 3.0

vt 0.0 0.0
vt 1.0 0.0
vt 1.0 1.0

vn 0.5 0.5 0.5

usemtl <error descr="Material “Marble” cannot be found">Marble</error>

f 1 2 3
f 1 2 <error descr="Geometric vertex index out of bounds: 4">4</error>

f 1/1 2/2 3/3
f 1/1 2/2 3/<error descr="Texture coordinates index out of bounds: 4">4</error>

f 1/1/1 2/2/1 3/3/1
f 1/1/1 2/2/1 3/3/<error descr="Normal index out of bounds: 2">2</error>

l 1 2 3
l 1 2 <error descr="Geometric vertex index out of bounds: 4">4</error>

p 1
p <error descr="Geometric vertex index out of bounds: 4">4</error>